--- a/index.html
+++ b/index.html
@@ -8,9 +8,59 @@
     <meta name="keywords" content="testimonios, clientes, opiniones, servicios">
     <meta name="author" content="Luchito">
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Sora:wght@100..800&display=swap" rel="stylesheet">
 
 </head>
-<body>
-    
+<body> 
+    <section class="testimonials">
+        <div class="testimonalsall">
+            <div class="text-testimonial">
+                <img src="resources/Star_fill.svg" alt="">
+                <h1>Reviewers</h1>
+                <div class="testimonial">
+                    <p>Reviewers is where people can access guidelines, checklists, and other tools to assist them in reviewing 
+                        papers or manuscripts. It provides a structured approach to ensure that the review process is thorough, 
+                        efficient, and consistent.</p>
+                    <p class="client">- Juan Pérez</p>
+                    <div class="checktestimonial">
+                        <div class="checkitem">
+                            <img src="resources/Done_ring_round_fill.svg" alt="Checklist Icon">
+                            <p>Checklist to Review an Academic Paper</p>
+                        </div>
+                        <div class="checkitem">
+                            <img src="resources/Done_ring_round_fill.svg" alt="Checklist Icon">
+                            <p>Peer Review Checklist</p>
+                        </div>
+                        <div class="checkitem">
+                            <img src="resources/Done_ring_round_fill.svg" alt="Checklist Icon">
+                            <p>Checklist for Editors, Reviewers, and Authors of SPIE Journals</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="testimoniall-box">
+                <div class="box-item">
+                    <img src="resources/google-testimonial.svg" alt="Logo Google" class="google-img">
+                    <img src="resources/Star_fill.svg" alt="" class="star-img">                   
+                    <img src="resources/Star_fill_gray.svg" alt="" class="stargrey-img">
+                    <div class="box-text">
+                        <h2>Samantha Lee</h2>
+                        <p class="comment-box">The checklist ensures that the review process is thorough</p>
+                </div>
+                <div class="box-item">
+                    <img src="resources/meta-testimonial.svg" alt="Logo Meta" class="google-img">
+                    <img src="resources/Star_fill.svg" alt="" class="star-img"> 
+                    <img src="resources/Star_fill_gray.svg" alt="" class="stargrey-img">
+                    <div class="box-text">
+                        <h2>Rachel Patel</h2>
+                        <p class="comment-box">I highly recommend the Writecream Business Description</p>
+                    </div>
+                </div>
+                </div>  
+            </div>        
+        </div>
+    </section>
 </body>
 </html>
