--- a/index.html
+++ b/index.html
@@ -15,50 +15,60 @@
 </head>
 <body> 
     <section class="testimonials">
-        <div class="testimonalsall">
+        <div class="testimonials-all">
             <div class="text-testimonial">
-                <img src="resources/Star_fill.svg" alt="">
+
+                <span class="star1-img">⭐️</span>
                 <h1>Reviewers</h1>
                 <div class="testimonial">
-                    <p>Reviewers is where people can access guidelines, checklists, and other tools to assist them in reviewing 
+                    <p class="testmonialpa">Reviewers is where people can access guidelines, checklists, and other tools to assist them in reviewing 
                         papers or manuscripts. It provides a structured approach to ensure that the review process is thorough, 
                         efficient, and consistent.</p>
-                    <p class="client">- Juan Pérez</p>
                     <div class="checktestimonial">
                         <div class="checkitem">
                             <img src="resources/Done_ring_round_fill.svg" alt="Checklist Icon">
-                            <p>Checklist to Review an Academic Paper</p>
+                            <p class="p-item">Checklist to Review an Academic Paper</p>
                         </div>
                         <div class="checkitem">
                             <img src="resources/Done_ring_round_fill.svg" alt="Checklist Icon">
-                            <p>Peer Review Checklist</p>
+                            <p class="p-item">Peer Review Checklist</p>
                         </div>
                         <div class="checkitem">
                             <img src="resources/Done_ring_round_fill.svg" alt="Checklist Icon">
-                            <p>Checklist for Editors, Reviewers, and Authors of SPIE Journals</p>
+                            <p class="p-item">Checklist for Editors, Reviewers, and Authors of SPIE Journals</p>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="testimoniall-box">
-                <div class="box-item">
-                    <img src="resources/google-testimonial.svg" alt="Logo Google" class="google-img">
+                <div class="box-item box-item1">
+                    <div class="box-img">
+                    <img src="resources/google-png.png" alt="Logo Google" class="red-img">
+                    <img src="resources/Star_fill.svg" alt="" class="star-img">
+                    <img src="resources/Star_fill.svg" alt="" class="star-img">  
+                    <img src="resources/Star_fill.svg" alt="" class="star-img">                     
                     <img src="resources/Star_fill.svg" alt="" class="star-img">                   
                     <img src="resources/Star_fill_gray.svg" alt="" class="stargrey-img">
+                    </div>
                     <div class="box-text">
                         <h2>Samantha Lee</h2>
                         <p class="comment-box">The checklist ensures that the review process is thorough</p>
+                    </div>
                 </div>
-                <div class="box-item">
-                    <img src="resources/meta-testimonial.svg" alt="Logo Meta" class="google-img">
-                    <img src="resources/Star_fill.svg" alt="" class="star-img"> 
-                    <img src="resources/Star_fill_gray.svg" alt="" class="stargrey-img">
+                <div class="box-item box-item2">
+                    <div class="box-img">
+                    <img src="resources/meta-png.png" alt="Logo Meta" class="red-img">
+                    <img src="resources/Star_fill.svg" alt="" class="star-img">
+                    <img src="resources/Star_fill.svg" alt="" class="star-img">  
+                    <img src="resources/Star_fill.svg" alt="" class="star-img">                     
+                    <img src="resources/Star_fill.svg" alt="" class="star-img">
+                    <img src="resources/Star_fill.svg" alt="" class="star-img">                      
+                    </div>
                     <div class="box-text">
                         <h2>Rachel Patel</h2>
                         <p class="comment-box">I highly recommend the Writecream Business Description</p>
                     </div>
-                </div>
-                </div>  
+                </div> 
             </div>        
         </div>
     </section>
