--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
                 <div class="box-item box-item1">
                     <div class="box-img">
                     <img src="resources/google-png.png" alt="Logo Google" class="red-img">
-                    <img src="resources/Star_fill.svg" alt="" class="star-img">
-                    <img src="resources/Star_fill.svg" alt="" class="star-img">  
-                    <img src="resources/Star_fill.svg" alt="" class="star-img">                     
-                    <img src="resources/Star_fill.svg" alt="" class="star-img">                   
-                    <img src="resources/Star_fill_gray.svg" alt="" class="stargrey-img">
+                        <div class="box-star">
+                        <img src="resources/Star_fill.svg" alt="" class="star-img">
+                        <img src="resources/Star_fill.svg" alt="" class="star-img">  
+                        <img src="resources/Star_fill.svg" alt="" class="star-img">                     
+                        <img src="resources/Star_fill.svg" alt="" class="star-img">                   
+                        <img src="resources/Star_fill_gray.svg" alt="" class="stargrey-img">
+                        </div>
                     </div>
                     <div class="box-text">
                         <h2>Samantha Lee</h2>
@@ -58,11 +60,13 @@
                 <div class="box-item box-item2">
                     <div class="box-img">
                     <img src="resources/meta-png.png" alt="Logo Meta" class="red-img">
-                    <img src="resources/Star_fill.svg" alt="" class="star-img">
-                    <img src="resources/Star_fill.svg" alt="" class="star-img">  
-                    <img src="resources/Star_fill.svg" alt="" class="star-img">                     
-                    <img src="resources/Star_fill.svg" alt="" class="star-img">
-                    <img src="resources/Star_fill.svg" alt="" class="star-img">                      
+                    <div class="box-star">
+                        <img src="resources/Star_fill.svg" alt="" class="star-img">
+                        <img src="resources/Star_fill.svg" alt="" class="star-img">  
+                        <img src="resources/Star_fill.svg" alt="" class="star-img">                     
+                        <img src="resources/Star_fill.svg" alt="" class="star-img">
+                        <img src="resources/Star_fill.svg" alt="" class="star-img">     
+                    </div>                 
                     </div>
                     <div class="box-text">
                         <h2>Rachel Patel</h2>
